# Locus

./: .gitignore  CHANGES.md  LocalComputer.py  README.md  install_dock_app.sh  install_windows_shortcut.ps1  open_dashboard.sh  pyproject.toml  requirements.txt  run.ps1  run.sh  run_app.sh  run_dashboard.sh  start.sh
.github/workflows/: release-check.yml
configs/: cloud_connectors.json  model_catalog.json  models.json  plugins.json  runtime.json
dashboard/: index.html
plugins/automations/: plugin.json
plugins/browser/: plugin.json
plugins/email/: plugin.json
plugins/filesystem/: plugin.json
plugins/git/: plugin.json
plugins/github/: plugin.json
plugins/google_drive/: plugin.json
plugins/memory/: plugin.json
plugins/shell/: plugin.json
plugins/uploads/: plugin.json
plugins/workspace/: plugin.json
scripts/: ai_chatbot_subagent.py  automation_runner.py  automation_store.py  bootstrap_python_macos.sh  bootstrap_python_windows.ps1  claim_extractor.py  cloud_dispatcher.py  conversation_history.py  generate_app_icons.py  hardware_profile.py  locus_acceptance.py  locus_macos_app.py  long_term_memory.py  model_selector.py  navigation_agent.py  networking.py  ollama_client.py  ollama_hybrid.py  orchestrator.py  os_profile.py  plan_browser.py  plan_prose.py  plugin_manager.py  plugin_runtime.py  release_check.py  resource_policy.py  router.py  run_history.py  runtime_policy.py  setup_manager.py  source_scoring.py  subagents.py  sys_limits.py  task_planner.py  ui_server.py  upload_store.py  workspace_agent.py  workspace_index.py  workspace_planner.py
(+1 files in other folders)
