[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "locus"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "playwright==1.43.0",
    "httpx==0.27.0",
    "psutil==5.9.8",
    "requests==2.32.3",
    "flask>=3.0",
    "flask-cors>=4.0",
    "websockets>=12.0",
    "Pillow>=10.0",
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-WebKit>=10.0; sys_platform == 'darwin'",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]
